rspec-tools/tests/resources/invalid-asciidoc/unclosed_ifdef.adoc
Some content followed by an ifdef

ifdef::env-github,rspecator-view[]

This ifdef should be valid
But then we don't close the block